--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,10 @@
-version: 0.1
+version: 0.2
 
 phases:
+  install:
+  runtime-versions:
+    nodejs:10
+
   build:
     commands:
       - echo nothing to do yet
@@ -11,4 +15,3 @@ artifacts:
     - KEVIN_SULLIVAN_RESUME.pdf
     - styles/main.css
     - images/*
-    
